# unitree_foxy

./: README.md  start_byobu_master.sh
dummy_code/: backup.cpp  ros2_udp.cpp
dummy_code/msg/: HandCheck.msg
gscam2/cfg/: params.yaml
gscam2/launch/: node_param_launch.py
hand_detection/: CMakeLists.txt  package.xml
hand_detection/scripts/: aruco_distance_estimator.py  hand_detection_node.py  hand_detector.py
